--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "phpgt/webengine": "^2.2"
-    }
+    },
+    "autoload": {
+		"psr-4": {
+			"App\\": "src/class"
+		}
+	}
 }
