--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,18 @@
 {
-    "require": {
-        "phpgt/webengine": "^2.2"
-    },
-    "autoload": {
+	"require": {
+		"phpgt/webengine": "^2.2"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "*"
+	},
+	"autoload": {
 		"psr-4": {
 			"App\\": "src/class"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"App\\Test\\": "test/unit"
 		}
 	}
 }
